src/infrastructure/keycloak/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-user-ingress
  namespace: keycloak
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - accounts.ecoma.io
      secretName: keycloak-tls
  rules:
    - host: accounts.ecoma.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
